--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -37,7 +37,7 @@
                               <ImageView fx:id="imgPoster" fitHeight="380.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                                  <children>
-                                    <Label fx:id="lblTitulo" prefHeight="90.0" prefWidth="570.0" text="adsfadfadsfadsf" textFill="WHITE" wrapText="true">
+                                    <Label fx:id="lblTitulo" prefHeight="90.0" prefWidth="570.0" textFill="WHITE" wrapText="true">
                                        <font>
                                           <Font name="System Bold" size="30.0" />
                                        </font>
@@ -45,7 +45,7 @@
                                           <Insets bottom="5.0" top="2.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="lblSubtitulo" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="563.0" text="asdfadsf" textFill="#ec1b1b">
+                                    <Label fx:id="lblSubtitulo" alignment="TOP_LEFT" prefHeight="30.0" prefWidth="563.0" textFill="#ec1b1b">
                                        <font>
                                           <Font name="System Bold" size="20.0" />
                                        </font>
@@ -57,7 +57,7 @@
                                        <children>
                                           <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="60.0" style="-fx-background-color: #CFCFCF; -fx-background-radius: 4;">
                                              <children>
-                                                <Label fx:id="lblRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" prefHeight="27.0" prefWidth="50.0" textAlignment="CENTER" textFill="#ec1b1b">
+                                                <Label fx:id="lblRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" prefHeight="35.0" prefWidth="53.0" textAlignment="CENTER" textFill="#ec1b1b">
                                                    <font>
                                                       <Font name="System Bold" size="18.0" />
                                                    </font>
@@ -110,19 +110,19 @@
                                     <Insets left="25.0" top="10.0" />
                                  </padding>
                               </VBox>
-                              <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#btnAddPressed" prefHeight="25.0" prefWidth="265.0" style="-fx-background-radius: 8;" text="Añadr a " GridPane.rowIndex="1">
+                              <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#btnAddPressed" prefHeight="25.0" prefWidth="265.0" style="-fx-background-radius: 8;" text="Añadir a " GridPane.rowIndex="1">
                                  <GridPane.margin>
                                     <Insets bottom="2.0" left="6.0" right="6.0" top="2.0" />
                                  </GridPane.margin>
                               </Button>
                               <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
-                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="448.0" text="Ver Trailer">
+                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="430.0" text="Ver Trailer">
                                        <HBox.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="160.0" style="-fx-background-color: black;" text="&gt;_Vista:   01/01/2024 " textFill="WHITE">
+                                    <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="180.0" style="-fx-background-color: black;" text="&gt;_Vista:  --/--/--" textFill="WHITE">
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
@@ -134,7 +134,7 @@
                               </HBox>
                               <HBox style="-fx-background-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <children>
-                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="580.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
+                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="590.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
                                        <padding>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </padding>
@@ -295,6 +295,9 @@
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
+                           <VBox.margin>
+                              <Insets right="15.0" />
+                           </VBox.margin>
                         </Label>
                      </children>
                      <VBox.margin>
