--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -60,7 +60,7 @@
                      <children>
                         <VBox alignment="CENTER_RIGHT" spacing="10.0">
                            <children>
-                              <Label fx:id="lblUserName" alignment="CENTER_RIGHT" contentDisplay="RIGHT" onMouseClicked="#goToUserProfile" text="User1234" textAlignment="RIGHT" textFill="WHITE">
+                              <Label fx:id="lblUserName" alignment="CENTER_RIGHT" contentDisplay="RIGHT" onMouseClicked="#goToUserProfile" textAlignment="RIGHT" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
