--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -194,9 +194,8 @@
                               </Label>
                               <VBox fx:id="vBoxDispositivos" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="10.0" top="10.0" />
-                                 </GridPane.margin>
-                              </VBox>
+                                    <Insets left="8.0" top="10.0" />
+                                 </GridPane.margin></VBox>
                               <Button fx:id="btnAddDispositivo" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnAddDispositivoPressed" prefWidth="200.0" text="Añadir dispositivo" GridPane.rowIndex="3">
                                  <padding>
                                     <Insets bottom="6.0" left="40.0" right="40.0" top="6.0" />
@@ -228,33 +227,6 @@
                   <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
                </VBox.margin>
             </VBox>
-            <HBox fx:id="hBoxDispositivo1" prefHeight="30.0" prefWidth="200.0">
-               <children>
-                  <ImageView fx:id="imgDispositivo1" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/others/pcIcon.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets top="5.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="25.0" text="·" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lblDispositivo1" prefHeight="30.0" prefWidth="236.0" text="Mi Equipo" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <ImageView fx:id="imgDeleteDisp1" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/others/remove.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </HBox>
          </children>
       </VBox>
    </children>
