--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -169,8 +170,8 @@
                               </Button>
                               <TextField fx:id="txtUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id="txtPass" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField fx:id="txtPass2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <PasswordField fx:id="txtPass" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <PasswordField fx:id="txtPass2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                            </children>
                         </GridPane>
                         <GridPane prefHeight="307.0" prefWidth="320.0">
