--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
@@ -117,19 +118,12 @@
                               </Button>
                               <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
-                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="430.0" text="Ver Trailer">
+                                    <Button fx:id="btnTrailer" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="25.0" prefWidth="450.0" text="Ver Trailer">
                                        <HBox.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="180.0" style="-fx-background-color: black;" text="&gt;_Vista:  --/--/--" textFill="WHITE">
-                                       <HBox.margin>
-                                          <Insets />
-                                       </HBox.margin>
-                                       <padding>
-                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                       </padding>
-                                    </Label>
+                                    <DatePicker prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: black;" />
                                  </children>
                               </HBox>
                               <HBox style="-fx-background-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -270,6 +264,14 @@
                                  <padding>
                                     <Insets bottom="10.0" />
                                  </padding>
+                              </HBox>
+                              <HBox alignment="CENTER">
+                                 <VBox.margin>
+                                    <Insets bottom="15.0" top="35.0" />
+                                 </VBox.margin>
+                                 <children>
+                                    <Button fx:id="btnTrailer1" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: white; -fx-border-color: #02ffa1; -fx-background-radius: 18;" text="Guardar" />
+                                 </children>
                               </HBox>
                            </children>
                            <HBox.margin>
