--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -123,7 +123,7 @@
                                           <Insets left="10.0" right="10.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <DatePicker prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: black;" />
+                                    <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: black;" />
                                  </children>
                               </HBox>
                               <HBox style="-fx-background-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -270,7 +270,7 @@
                                     <Insets bottom="15.0" top="35.0" />
                                  </VBox.margin>
                                  <children>
-                                    <Button fx:id="btnTrailer1" mnemonicParsing="false" onAction="#btnTrailerPressed" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: white; -fx-border-color: #02ffa1; -fx-background-radius: 18;" text="Guardar" />
+                                    <Button fx:id="btnGuardar" mnemonicParsing="false" onAction="#btnGuardarPressed" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: white; -fx-border-color: #02ffa1; -fx-background-radius: 18; -fx-border-radius: 18;" text="Guardar" />
                                  </children>
                               </HBox>
                            </children>
