--- a/src/main/resources/views/PaneDetalle.fxml
+++ b/src/main/resources/views/PaneDetalle.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -128,11 +129,12 @@
                               </HBox>
                               <HBox style="-fx-background-color: black;" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <children>
-                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="590.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
+                                    <Label fx:id="lblComentario" graphicTextGap="6.0" prefHeight="27.0" prefWidth="140.0" text="&gt;_Añadir comentario:   " textFill="#02ffa1">
                                        <padding>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </padding>
                                     </Label>
+                                    <TextField fx:id="txtComentario" prefWidth="450.0" style="-fx-background-color: black; -fx-text-fill: white;" />
                                     <ImageView fx:id="imgPen" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#escribirComentario" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@../images/others/pen.png" />
