--- a/src/main/resources/views/PaneUsuario.fxml
+++ b/src/main/resources/views/PaneUsuario.fxml
@@ -70,7 +70,7 @@
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="160.0" prefWidth="270.0">
                            <children>
-                              <Button fx:id="lblImportar" mnemonicParsing="false" onAction="#importarDatosPressed" prefWidth="200.0" text="Importar datos">
+                              <Button fx:id="lblImportar" mnemonicParsing="false" onAction="#importarDatosPressed" opacity="0.0" prefWidth="200.0" text="Importar datos">
                                  <VBox.margin>
                                     <Insets bottom="15.0" />
                                  </VBox.margin>
@@ -81,7 +81,7 @@
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="lblExportar" mnemonicParsing="false" onAction="#exportarDatosPressed" prefHeight="40.0" prefWidth="200.0" text="Exportar datos">
+                              <Button fx:id="lblExportar" mnemonicParsing="false" onAction="#exportarDatosPressed" opacity="0.0" prefHeight="40.0" prefWidth="200.0" text="Exportar datos">
                                  <padding>
                                     <Insets bottom="10.0" left="40.0" right="40.0" top="10.0" />
                                  </padding>
